--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/b2db2ee205.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
